# Ankhnowledge

./: .gitignore  .travis.yml  AudioHandler.h  Earth.cpp  Earth.h  FollowerObject.cpp  FollowerObject.h  GameManager.cpp  GameManager.h  InputManager.cpp  InputManager.h  LICENSE  Makefile  Makefile.am  Makefile.common  Makefile.in  Makefile.linux  Makefile.macos  Makefile.windows  Moon.cpp  Moon.h  Network.cpp  Network.h  Planet.cpp  Planet.h  PlanetRed.cpp  PlanetRed.h  Planeta.cpp  Planeta.h  README.md  SDLBase.cpp  SDLBase.h  SDLMain.h  Shape.cpp  Sprite.cpp  Sprite.h  TileMap.cpp  TileMap.h  TileSet.cpp  backup-112620132322-pre-ankhnowledge.tgz  (+17 more)
include/: Animation.h  AudioHandler.h  Block.h  BlockFixed.h  BlockMovable.h  BlockSand.h  BlockTreasure.h  BlockWater.h  Button.h  Character.h  CharacterSuti.h  ConnectController.h  FadeHandler.h  FadeScreen.h  GameManager.h  GameManager.h~  GameObject.h  HoverButton.h  InputManager.h  MainMenuButHandler.h  Makefile  Makefile.am  Makefile.am~  Makefile.in  Map.h  MessageBox.h  Network.h  OptionsController.h  SDLBase.h  SDLBase.h~  Scene.h  SceneConnect.h  SceneCredits.h  SceneCredits.h~  SceneLegal.h  SceneLogo.h  SceneMainMenu.h  SceneOptions.h  ScenePhaseTwo.h  SceneSelectMap.h  (+12 more)
src/: Animation.cpp  Animation.cpp~  Ankhnowledge  AudioHandler.cpp  AudioHandler.lo  Block.cpp  BlockFixed.cpp  BlockMovable.cpp  BlockSand.cpp  BlockTreasure.cpp  BlockWater.cpp  Button.cpp  Button.lo  Character.cpp  Character.cpp~  Character.lo  CharacterAlan.cpp  CharacterSuti.cpp  ConnectController.cpp  CreditsController.cpp  CreditsController.cpp~  FadeHandler.cpp  FadeHandler.lo  FadeScreen.cpp  FadeScreen.cpp~  FadeScreen.lo  GameManager.cpp  GameManager.cpp~  GameManager.lo  GameObject.cpp  GameObject.lo  HoverButton.cpp  InputManager.lo  MainMenuButHandler.cpp  MainMenuButHandler.cpp~  MainMenuButHandler.h  MainMenuButHandler.lo  Makefile  Makefile.am  Makefile.am~  (+59 more)
src/.deps/: *.Tpo  Animation.Plo  AudioHandler.Plo  Block.Plo  Button.Plo  Character.Plo  CreditsController.Plo  FadeHandler.Plo  FadeScreen.Plo  GameManager.Plo  GameObject.Plo  InputManager.Plo  MainMenuButHandler.Plo  Map.Plo  Network.Plo  OptionsController.Plo  SDLBase.Plo  Scene.Plo  SceneCredits.Plo  SceneGameOver.Plo  SceneLegal.Plo  SceneLogo.Plo  SceneMainMenu.Plo  SceneOptions.Plo  ScenePhaseOne.Plo  SceneTechnology.Plo  SceneThirdParty.Plo  Shape.Plo  Slider.Plo  SplashScreen.Plo  Sprite.Plo  Tile.Plo  TileMap.Plo  TileSet.Plo  main.Po
src/.libs/: libitem.la  libitem.lai
src/engine/: Makefile
src/engine/include/: engine.h
src/game/: Makefile
src/game/include/: Animation.h  AudioHandler.h  Block.h  BlockMovable.h  BlockSand.h  Button.h  Character.h  CharacterAlan.h  CreditsController.h  FadeHandler.h  FadeScreen.h  InputManager.h  MainMenuButHandler.h  Makefile.am  Map.h  MessageBox.h  Network.h  SDLBase.h  Scene.h  SceneCredits.h  SceneGameOver.h  SceneMainMenu.h  SceneOptions.h  ScenePhaseFive.h  ScenePhaseFour.h  ScenePhaseOne.h  ScenePhaseThree.h  SceneSelectCharacter.h  SceneTechnology.h  SceneThirdParty.h  SelectMapController.h  Shape.h  SplashScreen.h  Sprite.h  TileMap.h  TileSet.h
src/game/src/: Map.cpp  (+29 more)
test/: Makefile.am  Makefile.am~
(+56 files in other folders)
