# Author: Edson Alves - edsonalves@unb.br
# Date: 26/11/2010

# Includes dir
libitemincludedir = $(includedir)/

# Include files
include_HEADERS = AudioHandler.h Character.h FadeHandler.h FadeScreen.h GameManager.h GameObject.h InputManager.h Network.h SDLBase.h Shape.h Sprite.h TileMap.h TileSet.h
