# Author: Edson Alves - edsonalves@unb.br
# Date: 26/11/2010

# Includes dir
libitemincludedir = $(includedir)/

# Include files
include_HEADERS = Animation.h AudioHandler.h Block.h Button.h Character.h FadeHandler.h FadeScreen.h GameManager.h GameObject.h InputManager.h Map.h MainMenuButHandler.h Network.h OptionsController.h SDLBase.h Scene.h SceneLegal.h SceneLogo.h SceneMainMenu.h ScenePhaseOne.h SceneTechnology.h SceneThirdParty.h SceneGameOver.h SceneCredits.h SceneOptions.h SplashScreen.h Tile.h Shape.h Sprite.h Slider.h
