# Targets specification
#
# Author: Edson Alves - edsonalves@unb.br
# Date: 26/11/2010

# Programs excluded from instalation
noinst_PROGRAMS       =	test

# Program description
test_SOURCES  =	

# Libraries needed to build program
test_LDADD    =	

# Include flags
INCLUDES = -I../include -Wall -Wno-long-long

