# Author: Edson Alves - edsonalves@unb.br
# Date: 26/11/2010

# Includes dir
libitemincludedir = $(includedir)/

# Include files
include_HEADERS = Animation.h AudioHandler.h Block.h BlockMovable.h BlockWater.h Button.h BlockTreasure.h BlockFixed.h Character.h CharacterSuti.h CharacterAlan.h CreditsController.h FadeHandler.h FadeScreen.h GameManager.h GameObject.h InputManager.h Map.h MainMenuButHandler.h MessageBox.h Network.h OptionsController.h SDLBase.h Scene.h SceneLegal.h SceneLogo.h SceneMainMenu.h ScenePhaseOne.h SceneTechnology.h SceneThirdParty.h SceneGameOver.h SceneCredits.h SceneOptions.h SplashScreen.h Tile.h Shape.h Sprite.h Slider.h SkillDig.h Skill.h BlockSand.h SkillSand.h TileMap.h SelectMapController.h SceneSelectMap.h HoverButton.h SceneSelectCharacter.h SelectCharacterController.h ScenePhaseTwo.h ScenePhaseThree.h ScenePhaseFour.h ScenePhaseFive.h

